fortitude/src/rules/error/snapshots/fortitude__rules__error__tests__syntax-error_E001.f90.snap
---
source: fortitude/src/rules/error/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/error/E001.f90:4:23: E001 Syntax error
  |
2 |   implicit none
3 | contains
4 |   subroutine bar(x, y, )
  |                       ^ E001
5 |     integer, intent(in) :: x, y
6 |   end subroutine bar
  |
